Fix home bar space on iPhone

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ nav {
   position: fixed;
   width: 100%;
   height: 3.5em;
+  padding-bottom: env(safe-area-inset-bottom, 0);
 }
 
 nav ul {
@@ -156,8 +157,8 @@ nav a {
 
   #container {
     margin-top: 5em;
-    margin-bottom: 3.5em;
-    height: calc(100vh - 5em - 3.5em);
+    margin-bottom: calc(3.5em + env(safe-area-inset-bottom, 0));
+    height: calc(100vh - 5em - 3.5em - env(safe-area-inset-bottom, 0));
     overflow: scroll;
   }
 
